<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="温馨提示"
            android:textColor="@color/base_black"
            android:textSize="@dimen/sp16"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvContext"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:text="你好世界！"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/base_text"
            android:textSize="@dimen/sp14" />

        <LinearLayout
            android:id="@+id/customLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/base_line_light" />

        <LinearLayout
            android:id="@+id/doubleLayout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLeft"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/option_leftbottom_corners"
                android:gravity="center"
                android:text="@string/base_quit"
                android:textColor="@color/base_text"
                android:textSize="@dimen/sp15" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/base_line_light" />

            <TextView
                android:id="@+id/tvRight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/option_rightbottom_corners"
                android:gravity="center"
                android:text="@string/base_good"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp15" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/singleLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvSingle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/option_bottom_corners"
                android:gravity="center"
                android:text="@string/base_fix"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp15" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
